Fixing build issues.